fix: adjust icon alignment and refactor onclick function

--- a/src/surface-components/Accordion/Accordion.module.css
+++ b/src/surface-components/Accordion/Accordion.module.css
@@ -1,27 +1,34 @@
 .accordionDefault {
-  display: flex;
-  flex-direction: column;
-  max-width: 486px;
-  background: #ffffff;
-  border: 1px solid #e6e1e5;
-  padding: 10px;
+	display: flex;
+	flex-direction: column;
+	max-width: 486px;
+	background: #ffffff;
+	border: 1px solid #e6e1e5;
+	padding: 10px;
 }
 
 .accordionHeader {
-  display: flex;
-  justify-content: space-between;
-  font-family: "Inter";
-  font-weight: 500;
-  line-height: 24px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	font-family: 'Inter';
+	font-weight: 500;
+	line-height: 24px;
 }
 
 .accordionContent {
-  font-family: "Inter";
-  font-weight: 400;
-  line-height: 24px;
-  margin-top: 10px;
+	font-family: 'Inter';
+	font-weight: 400;
+	line-height: 24px;
+	margin-top: 10px;
 }
 
-.arrowRotate {
-  transform: rotate(180deg);
+.accordionArrow,
+.accordionArrowRotate {
+	display: flex;
+	align-items: center;
+}
+
+.accordionArrowRotate {
+	transform: rotate(180deg);
 }
